conteudo do site

--- a/Projeto Resident Evil Wiki/assets/css/style.css
+++ b/Projeto Resident Evil Wiki/assets/css/style.css
@@ -9,7 +9,7 @@ a { color:blue; text-decoration: none;}
     background-color: #090f13;
 }
 .bar {
-    background-color: #171f25;
+    background-color: #c90a02;
     padding:15px;
     border-top: solid 1px #cdcdcd;
     border-bottom: solid 1px #cdcdcd;
