--- a/Projeto Resident Evil Wiki/assets/css/style.css
+++ b/Projeto Resident Evil Wiki/assets/css/style.css
@@ -39,3 +39,20 @@ a { color:blue; text-decoration: none;}
 figure {
     text-align: center;
 }
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+th {
+    background-color: #c90a02;
+    color: white;
+}
+img {
+    width: 150px;
+    height: auto;
+}
