--- a/Projeto Resident Evil Wiki/assets/css/style.css
+++ b/Projeto Resident Evil Wiki/assets/css/style.css
@@ -53,6 +53,16 @@ th {
     color: white;
 }
 img {
-    width: 150px;
+    width: 100%;
     height: auto;
+    max-width: 150px; /* Tamanho máximo da imagem */
+}
+@media (max-width: 600px) {
+    th, td {
+        display: block;
+        width: 100%;
+    }
+    td img {
+        max-width: 100%;
+    }
 }
