--- a/Projeto Resident Evil Wiki/assets/css/style.css
+++ b/Projeto Resident Evil Wiki/assets/css/style.css
@@ -4,7 +4,7 @@ body, html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 ul { list-style: none; padding-left: 5px; }
-a { color:blue; text-decoration: none;}
+a { font-weight: bold; color: #c90a02; text-decoration: none;}
 .logo{
     background-color: #090f13;
 }
@@ -66,4 +66,5 @@ th {
     td img {
         max-width: 100%;
     }
+    
 }
